Fix hamburger not visible in drawer for mobile

--- a/src/scss/components/navigation.scss
+++ b/src/scss/components/navigation.scss
@@ -43,6 +43,16 @@ header {
         .hamburger:focus {
             outline: none;
         }
+
+        @include media-breakpoint-down(sm) {
+            .hamburger.is-active {
+                .hamburger-inner,
+                .hamburger-inner::after,
+                .hamburger-inner::before {
+                    background-color: #fff;
+                }
+            }
+        }
         
         @include media-breakpoint-up(lg) {
             border-right: 1px solid $gray-100;
